@@ -524,8 +524,7 @@ Monster_actor::Monster_actor
 	istream& nfile,			// 'monster.dat', generally.
 	int num,			// MONSTER #.
 	int has_usecode			// 1 if a 'type1' MONSTER.
-	) : Npc_actor(nfile, num, has_usecode), prev_monster(0), creator(0),
-	    info(0)
+	) : Npc_actor(nfile, num, has_usecode), prev_monster(0), info(0)
 	{
 	if (in_world)
 		in_world->prev_monster = this;
@@ -544,10 +543,6 @@ void Monster_actor::write
 	)
 	{
 	if (Actor::is_dead_npc())	// Not alive?
-		return;
-					// Created from eggs which get re-
-					//   hatched when read in?
-	if (creator && creator->get_criteria() == Egg_object::cached_in)
 		return;
 	Actor::write(nfile);		// Now write.
 	}
